# my-agents

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  plan.md
scripts/: README.md  ma-codex-notify  ma-task
src/: action.rs  app.rs  config.rs  event.rs  main.rs  tui.rs
src/components/: mod.rs  preview_panel.rs  status_bar.rs  task_tree.rs
src/components/modals/: confirm_delete.rs  create_project.rs  create_task.rs  custom_prompt.rs  edit_item.rs  filter.rs  input.rs  mod.rs  select_link.rs  select_preview_url.rs  set_link.rs  set_status.rs  settings.rs  sort.rs
src/domain/: project.rs  task.rs
src/services/: agent_monitor.rs  git_finder.rs  mod.rs  pm_scheduler.rs  pr_monitor.rs  session_restore.rs  task_setup.rs  tmux.rs  worktree.rs
src/storage/: fs_store.rs  mod.rs
